--- a/Forms/Users/UserManager.xaml
+++ b/Forms/Users/UserManager.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SystemModerator.Forms.ComputerManager"
+﻿<Window x:Class="SystemModerator.Forms.Users.UserManager"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SystemModerator.Forms"
+        xmlns:local="clr-namespace:SystemModerator.Forms.Users"
         mc:Ignorable="d"
-        Title="Window1" Height="450" Width="800">
+        Title="UserManager" Height="450" Width="800">
     <Grid>
         
     </Grid>
